# vala-skeleton-autotools

./: .gitignore  Makefile.am  README  README.md  TODO  configure.ac  new_project.sh
data/: main.ui
src/: config.vala.in  main.vala
vala-skeleton/: .gitignore  Makefile.am  autogen.sh  configure.ac  vala-skeleton-9999.ebuild
vala-skeleton/data/: main.ui  vala-skeleton.desktop.in.in
vala-skeleton/po/: LINGUAS  POTFILES.in  POTFILES.skip  it.po
vala-skeleton/src/: config.vala.in  config2.vala.in  main.vala
vala-skeleton/vapi/: config.vapi
